sd new config, updated checking process work